--- a/messaging/templates/messaging/base.html
+++ b/messaging/templates/messaging/base.html
@@ -6,7 +6,7 @@
     <script src="http://code.jquery.com/jquery-2.2.3.js"></script>
     <script src="http://code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
     <link rel="stylesheet" href="{% static "style/base.css" %}" />
-    <title>{% block title %}MyRestaurants by MyRecommendations{% endblock %}</title>
+    <title>{% block title %}Messaging{% endblock %}</title>
 </head>
 
 <body>
@@ -14,7 +14,7 @@
 <div id="sidebar">
     {% block sidebar %}
         <ul>
-            <li><a href="/myrestaurants/">Home</a></li>
+            <li><a href="/messaging/">Home</a></li>
         </ul>
     {% endblock %}
 </div>
