--- a/messaging/templates/messaging/form.html
+++ b/messaging/templates/messaging/form.html
@@ -1,4 +1,4 @@
-{% extends "myrestaurants/base.html" %}
+{% extends "messaging/base.html" %}
 {% block content %}
     <form method="post" action="">
         {% csrf_token %}
