--- a/messaging/templates/messaging/base.html
+++ b/messaging/templates/messaging/base.html
@@ -11,6 +11,19 @@
 
 <body>
 
+<div id="header">
+    {% block header %}
+        {% if user.username %}
+            <p>User: {{ user.username }} | <a href="{% url 'logout' %}?next={{request.path}}">logout</a></p>
+        {% else %}
+            <p>
+                <a href="{% url 'login' %}?next={{request.path}}">Login</a>
+                 / Register
+            </p>
+        {% endif %}
+    {% endblock %}
+</div>
+
 <div id="sidebar">
     {% block sidebar %}
         <ul>
