--- a/messaging/templates/messaging/base.html
+++ b/messaging/templates/messaging/base.html
@@ -18,7 +18,7 @@
         {% else %}
             <p>
                 <a href="{% url 'login' %}?next={{request.path}}">Login</a>
-                 / Register
+                / <a href="{% url 'messaging:user_create' %}?next={{request.path}}">Register</a>
             </p>
         {% endif %}
     {% endblock %}
