Now we can see the content of the messages

--- a/messaging/templates/messaging/base.html
+++ b/messaging/templates/messaging/base.html
@@ -29,6 +29,9 @@
     {% block sidebar %}
         <ul>
             <li><a href="/messaging/">Home</a></li>
+            {% if user.username %}
+                <h1>CHAT</h1>
+            {% endif %}
         </ul>
     {% endblock %}
 </div>
