almost nothing changed

--- a/messaging/templates/messaging/message_detail.html
+++ b/messaging/templates/messaging/message_detail.html
@@ -1,7 +1,7 @@
 {% extends "messaging/base.html" %}
 {% block content %}
 
-    <h2>Date: {{ message.date }}</h2>
+    <h2>Date: {{ message.date|date:'Y-m-d H:i' }}</h2>
 <h2>Content:</h2>
 <p>
     {{ message.text|linebreaks }}<br/>
