view group membres

--- a/messaging/templates/messaging/base.html
+++ b/messaging/templates/messaging/base.html
@@ -36,7 +36,7 @@
                 {% for group in groups %}
                     <ul>
                         <li>
-                            {{ group.name }}
+                            <a href="{% url 'messaging:group_detail' group.id %}" > {{ group.name }} </a>
                         </li>
                     </ul>
                 {% endfor %}
