--- a/messaging/templates/messaging/group_detail.html
+++ b/messaging/templates/messaging/group_detail.html
@@ -2,7 +2,7 @@
 {% block content %}
 
     <h2>Name: {{ group.name }}</h2>
-<h2>Content:</h2>
+<h2>Members:</h2>
 <p>
     <ul>
     {% for member in group.members.all %}
