--- a/messaging/templates/messaging/group_detail.html
+++ b/messaging/templates/messaging/group_detail.html
@@ -12,4 +12,13 @@
     {{ message.text|linebreaks }}<br/>
 </p>
 
+<h2>
+    SEND MESSAGE:
+</h2>
+    <form action="" method="post" >
+        {% csrf_token %}
+        Message: <textarea name="message" id="group_message" rows="4"></textarea>
+        <input type="submit" value="Send" />
+    </form>
+
 {% endblock %}
