--- a/messaging/templates/messaging/base.html
+++ b/messaging/templates/messaging/base.html
@@ -6,7 +6,7 @@
     <script src="http://code.jquery.com/jquery-2.2.3.js"></script>
     <script src="http://code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
     <link rel="stylesheet" href="{% static "style/base.css" %}" />
-    <title>{% block title %}Messaging{% endblock %}</title>
+    <title>Messaging{% block title %}{% endblock %}</title>
 </head>
 
 <body>
