--- a/messaging/templates/messaging/group_detail.html
+++ b/messaging/templates/messaging/group_detail.html
@@ -16,7 +16,7 @@
     MESSAGES:
 </h2>
     {% for message in group_messages %}
-        {{ message.text }}
+        {{ message.text }} <br>
     {% endfor %}
 
 
