changed form of showing messages in chats

--- a/messaging/templates/messaging/group_detail.html
+++ b/messaging/templates/messaging/group_detail.html
@@ -15,7 +15,7 @@
 <h2>
     MESSAGES:
 </h2>
-    {% for message in group_messages %}
+    {% for message in group.messages.all %}
         {{ message.text }} <br>
     {% endfor %}
 
