--- a/messaging/templates/messaging/base.html
+++ b/messaging/templates/messaging/base.html
@@ -56,5 +56,14 @@
     {% block footer %}{% endblock %}
 </div>
 
+<div id="sidebar2">
+    {% block sidebar2 %}
+        <h2>Other People</h2>
+            {% for user in users %}
+                { user.username }}
+            {% endfor %}
+    {% endblock %}
+</div>
+
 </body>
 </html>
