provisional group_users_edit

--- a/messaging/templates/messaging/group_detail.html
+++ b/messaging/templates/messaging/group_detail.html
@@ -10,7 +10,7 @@
     {% endfor %}
     </ul>
 
-    <h2><a href="{% url 'messaging:group_users_add' group.id %}">ADD USER</a> </h2>
+    <h2><a href="{% url 'messaging:group_users_edit' group.id %}">ADD USER</a> </h2>
 
 </p>
 
