--- a/messaging/templates/messaging/base.html
+++ b/messaging/templates/messaging/base.html
@@ -50,13 +50,17 @@
 
 <div id="sidebar2">
     {% block sidebar2 %}
-        <h2>Friends:</h2>
-            {% for friends in user.friends.all %}
-                <a href="{% url 'messaging:view_profile_with_pk' pk=friends.pk %} "
-                    <h5>{{ friends.username }}</h5>
-                </a>
-                <button type="button" class="btn btn-default">Remove Friend</button>
-            {% endfor %}
+        {% if user.username %}
+            <h2>Your friends:</h2>
+                {% for friend in request.user.friends.all %}
+                    <a href="{% url 'messaging:view_profile_with_pk' pk=friend.pk %} "
+                        <h5>{{ friend.username }}</h5>
+                    </a>
+                    <a href="{% url 'messaging:change_friend' operation='remove' pk=friend.pk %}">
+                        <button type="button" class="btn btn-default">Remove Friend</button>
+                    </a>
+                {% endfor %}
+        {% endif %}
     {% endblock %}
 </div>
 
