--- a/messaging/templates/messaging/base.html
+++ b/messaging/templates/messaging/base.html
@@ -14,7 +14,7 @@
 <div id="header">
     {% block header %}
         {% if user.username %}
-            <p>User: {{ user.username }} | <a href="{% url 'logout' %}?next={{request.path}}">logout</a></p>
+            <p>User: {{ request.user.username }} | <a href="{% url 'logout' %}?next={{request.path}}">logout</a></p>
         {% else %}
             <p>
                 <a href="{% url 'login' %}?next={{request.path}}">Login</a>
