--- a/messaging/templates/messaging/profile.html
+++ b/messaging/templates/messaging/profile.html
@@ -1,5 +1,9 @@
 {% extends "messaging/base.html" %}
 
+{% block title %}
+    - User Profile
+{% endblock %}
+
 {% block content %}
 <title>Profile</title>
 
