--- a/messaging/templates/messaging/group_detail.html
+++ b/messaging/templates/messaging/group_detail.html
@@ -1,4 +1,9 @@
 {% extends "messaging/base.html" %}
+
+{% block title %}
+    - Group
+{% endblock %}
+
 {% block content %}
 
     <h2>Name: {{ group.name }}</h2>
