--- a/messaging/templates/messaging/base.html
+++ b/messaging/templates/messaging/base.html
@@ -31,7 +31,7 @@
             <h1><li><a href="/messaging/">Home</a></li></h1>
             {% if user.username %}
                 <h3> <a href="{% url 'messaging:view_profile' %}">Your Profile</a></h3>
-                <h1>CHATS</h1>
+                <h1><li>Chats</li></h1>
                 <h3><a href="{% url 'messaging:group_create' %}" >Create chat</a></h3>
 
                 {% for group in user.groups.all %}
@@ -57,8 +57,8 @@
                         <a href="{% url 'messaging:view_profile_with_pk' pk=friend.pk %} "
                             <h5>{{ friend.username }}</h5>
                         </a>
-                        <a href="{% url 'messaging:change_friend' operation='remove' pk=friend.pk %}">
-                            <button type="button" class="btn btn-default">Remove Friend</button>
+                        <a href="{% url 'messaging:change_friend' operation='remove' pk=friend.pk %}" >
+                            <button type="button" class="btn btn-default">Remove</button>
                         </a>
                     </li>
                 {% endfor %}
