still not working

--- a/messaging/templates/messaging/message_detail.html
+++ b/messaging/templates/messaging/message_detail.html
@@ -11,7 +11,7 @@
     {{ message.text|linebreaks }}<br/>
 </p>
 
-    <form action="{% url 'messaging:message_reply' %}" method="post" >
+    <form action="{% url 'messaging:message_reply' message.pk %}" method="post" >
         {% csrf_token %}
         Message: <textarea name="message" id="message_reply" rows="4"></textarea><br>
         <input type="submit" value="Reply" />
