some styles added

--- a/messaging/templates/messaging/base.html
+++ b/messaging/templates/messaging/base.html
@@ -6,6 +6,7 @@
     <script src="http://code.jquery.com/jquery-2.2.3.js"></script>
     <script src="http://code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
     <link rel="stylesheet" href="{% static "style/base.css" %}" />
+    <link rel="stylesheet" href="{% static "style/more.css" %}" />
     <title>Messaging{% block title %}{% endblock %}</title>
 </head>
 
