--- a/messaging/templates/messaging/base.html
+++ b/messaging/templates/messaging/base.html
@@ -58,7 +58,7 @@
                             <h5>{{ friend.username }}</h5>
                         </a>
                         <a href="{% url 'messaging:change_friend' operation='remove' pk=friend.pk %}" >
-                            <button type="button" class="btn btn-default">Remove</button>
+                            <button type="button" class="btn btn-default">REMOVE FRIEND</button>
                         </a>
                     </li>
                 {% endfor %}
