--- a/messaging/static/style/more.css
+++ b/messaging/static/style/more.css
@@ -7,6 +7,13 @@ h1 a, h2 a {
     background-color: #C25100;
     margin-top: 0;
     padding: 20px 20px 20px 40px;
+    /*display: block;*/
+    /*height: 120px;*/
+}
+
+#title {
+    float: left;
+    display: block;
 }
 
 .page-header h1, .page-header h1 a, .page-header h1 a:visited, .page-header h1 a:active {
@@ -37,7 +44,6 @@ h1, h2, h3, h4 {
 
 .top-menu, .top-menu:hover, .top-menu:visited {
     color: #ffffff;
-    float: right;
     font-size: 26pt;
     margin-right: 20px;
 }
