--- a/messaging/templates/messaging/base.html
+++ b/messaging/templates/messaging/base.html
@@ -3,17 +3,22 @@
 <html lang="en">
 <head>
     <link rel="stylesheet" href="http://code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css" />
+    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
     <script src="http://code.jquery.com/jquery-2.2.3.js"></script>
     <script src="http://code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
     <link rel="stylesheet" href="{% static "style/base.css" %}" />
     <link rel="stylesheet" href="{% static "style/more.css" %}" />
-    <title>Messaging{% block title %}{% endblock %}</title>
+    <title>Naxgen{% block title %}{% endblock %}</title>
 </head>
 
 <body>
 
-<div id="header">
+<div id="header" class="page-header">
     {% block header %}
+        <div id="title">
+            <h1>Naxgen</h1>
+        </div>
         {% if user.username %}
             <p>User: {{ request.user.username }} | <a href="{% url 'logout' %}?next={{request.path}}">logout</a></p>
         {% else %}
