--- a/messaging/templates/messaging/message_detail.html
+++ b/messaging/templates/messaging/message_detail.html
@@ -5,11 +5,14 @@
 
 {% block content %}
 
+<div class="post">
     <h2>Date: {{ message.date|date:'Y-m-d H:i' }}</h2>
+
 <h2>Content:</h2>
 <p>
     {{ message.text|linebreaks }}<br/>
 </p>
+</div>
 
     <form action="{% url 'messaging:message_reply' message.pk %}" method="post" >
         {% csrf_token %}
