--- a/messaging/templates/messaging/base.html
+++ b/messaging/templates/messaging/base.html
@@ -31,7 +31,7 @@
     {% endblock %}
 </div>
 
-<div id="sidebar">
+<div id="left-sidebar">
     {% block sidebar %}
         <ul>
             <h1><li><a href="/messaging/">Home</a></li></h1>
@@ -54,7 +54,7 @@
     {% endblock %}
 </div>
 
-<div id="sidebar2">
+<div id="right-sidebar">
     {% block sidebar2 %}
         {% if user.username %}
             <h2>Your friends:</h2>
