--- a/messaging/static/style/base.css
+++ b/messaging/static/style/base.css
@@ -13,12 +13,14 @@
 {
     float: left;
     width: 190px;
+    padding-left: 10px;
 }
 
 #right-sidebar
 {
     float: right;
     width: 190px;
+    padding-right: 10px;
 }
 
 #footer
