--- a/messaging/static/style/more.css
+++ b/messaging/static/style/more.css
@@ -8,12 +8,15 @@ h1 a, h2 a {
     margin-top: 0;
     padding: 20px 20px 20px 40px;
     /*display: block;*/
-    /*height: 120px;*/
+    /* TEMPORAL FIX */
+    height: 120px;
 }
 
 #title {
     float: left;
     display: block;
+    margin: 0px;
+    padding: 0px;
 }
 
 .page-header h1, .page-header h1 a, .page-header h1 a:visited, .page-header h1 a:active {
