--- a/messaging/templates/messaging/base.html
+++ b/messaging/templates/messaging/base.html
@@ -17,7 +17,7 @@
 <div id="header" class="page-header">
     {% block header %}
         <div id="title">
-            <h1>Naxgen</h1>
+            <h1><a href="">Naxgen</a></h1>
         </div>
         {% if user.username %}
             <p>User: {{ request.user.username }} | <a href="{% url 'logout' %}?next={{request.path}}">logout</a></p>
@@ -33,12 +33,11 @@
 
 <div id="left-sidebar">
     {% block sidebar %}
-        <ul>
-            <h1><li><a href="/messaging/">Home</a></li></h1>
+            <h1><a href="/messaging/">Home</a></h1>
             {% if user.username %}
                 <h3> <a href="{% url 'messaging:view_profile' %}">Your Profile</a></h3>
                 <h1><li>Chats</li></h1>
-                <h3><a href="{% url 'messaging:group_create' %}" >Create chat</a></h3>
+                <h3><a href="{% url 'messaging:group_create' %}" >New Chat</a></h3>
 
                 {% for group in user.groups.all %}
                     <ul>
@@ -49,8 +48,6 @@
                 {% endfor %}
 
             {% endif %}
-        </ul>
-
     {% endblock %}
 </div>
 
