--- a/messaging/static/style/more.css
+++ b/messaging/static/style/more.css
@@ -17,6 +17,7 @@ h1 a, h2 a {
     display: block;
     margin: 0px;
     padding: 0px;
+    font-family: 'Pacifico', cursive;
 }
 
 .page-header h1, .page-header h1 a, .page-header h1 a:visited, .page-header h1 a:active {
