--- a/messaging/templates/messaging/base.html
+++ b/messaging/templates/messaging/base.html
@@ -17,7 +17,7 @@
 <div id="header" class="page-header">
     {% block header %}
         <div id="title">
-            <h1><a href="">Naxgen</a></h1>
+            <h1><a href="/messaging/">Naxgen</a></h1>
         </div>
         {% if user.username %}
             <p>User: {{ request.user.username }} | <a href="{% url 'logout' %}?next={{request.path}}">logout</a></p>
