--- a/messaging/static/style/base.css
+++ b/messaging/static/style/base.css
@@ -40,6 +40,7 @@ textarea, input[type=number], input[type=url]
     margin: 5px;
     padding: 5px;
     word-break: break-word;
+    border-radius: 1em;
 }
 #messages
 {
@@ -47,6 +48,7 @@ textarea, input[type=number], input[type=url]
     padding: 10px;
     display: inline-block;
     max-width: 95%;
+    border-radius: 1em;
 }
 #message_from
 {
