footer added to base

--- a/messaging/templates/messaging/base.html
+++ b/messaging/templates/messaging/base.html
@@ -86,7 +86,7 @@
 </div>
 
 <div id="footer">
-    {% block footer %}{% endblock %}
+    {% block footer %}<hr><div >Developed by <b>Vikton</b> and <b>danic96</b></div>{% endblock %}
 </div>
 
 
