--- a/messaging/static/style/more.css
+++ b/messaging/static/style/more.css
@@ -1,19 +1,23 @@
 h1 a, h2 a {
-    color: #C25100;
+    color: #AAA439;
     font-family: 'Lobster';
+}
+body, html {
+    height: 90%;
 }
 
 .page-header {
-    background-color: #C25100;
+    background-color: #AAA439;
     margin-top: 0;
+    margin-bottom: 0;
     padding: 20px 20px 20px 40px;
 }
 
 #title {
     float: left;
     display: block;
-    margin: 0px;
-    padding: 0px;
+    margin: 0;
+    padding: 0;
     font-family: 'Pacifico', cursive;
 }
 
