--- a/messaging/static/style/base.css
+++ b/messaging/static/style/base.css
@@ -8,6 +8,7 @@
     margin-left: 190px;
     margin-right: 190px;
     padding: 10px;
+    height: 90%;
 }
 #left-sidebar
 {
@@ -30,6 +31,7 @@
     margin: 0;
     padding: 10px;
     text-align: center;
+    float: bottom;
 }
 textarea, input[type=number], input[type=url]
 {
