--- a/messaging/templates/messaging/message_list.html
+++ b/messaging/templates/messaging/message_list.html
@@ -3,7 +3,8 @@
     - Home
 {% endblock %}
 {% block content %}
-    <form action="/" method="post">
+    <form action="{%  url  'messaging:search'  %}" method="post" >
+        {% csrf_token %}
         <input type="text" placeholder="Search users here..." name="term" size="30">
         <button type="submit">Search</button>
     </form>
