--- a/messaging/static/style/more.css
+++ b/messaging/static/style/more.css
@@ -2,8 +2,12 @@ h1 a, h2 a {
     color: #AAA439;
     font-family: 'Lobster';
 }
-body, html {
-    height: 90%;
+html {
+    min-height: 100%;
+    position: relative;
+}
+body {
+    height: 100%;
 }
 
 .page-header {
