--- a/messaging/static/style/more.css
+++ b/messaging/static/style/more.css
@@ -2,13 +2,28 @@ h1 a, h2 a {
     color: #AAA439;
     font-family: 'Lobster';
 }
+/* PERSONAL */
+html, body {
+    width: 100%;
+    height: 100%;
+    padding: 0;
+    margin: 0;
+}
+/*
 html {
     min-height: 100%;
     position: relative;
 }
 body {
     height: 100%;
+    min-height: 100%;
 }
+*/
+.max-height {
+    height: 100%;
+}
+
+/* END PERSONAL */
 
 .page-header {
     background-color: #AAA439;
