--- a/messaging/templates/messaging/base.html
+++ b/messaging/templates/messaging/base.html
@@ -37,6 +37,8 @@
     {% endblock %}
 </div>
 
+<div id="wrapper" class="max-height">
+
 <div id="left-sidebar">
     {% block sidebar %}
             <h2><a href="/messaging/">Home</a></h2>
@@ -83,6 +85,7 @@
     {% block content %}
         {% if error_message %}<p><strong>{{ error_message }}</strong></p>{% endif %}
     {% endblock %}
+</div>
 </div>
 
 <div id="footer">
