tired of doing styles

--- a/messaging/templates/messaging/base.html
+++ b/messaging/templates/messaging/base.html
@@ -14,7 +14,7 @@
 
 <body>
 
-<div id="header" class="page-header">
+<div class="page-header" id="header">
     {% block header %}
         <div id="wrapper">
             <div id="title">
@@ -37,7 +37,7 @@
     {% endblock %}
 </div>
 
-<div id="wrapper" class="max-height">
+<div id="wrapper" class="max-height" name="content+sidebars">
 
 <div id="left-sidebar">
     {% block sidebar %}
