--- a/messaging/static/style/more.css
+++ b/messaging/static/style/more.css
@@ -3,9 +3,12 @@ h1 a, h2 a {
     font-family: 'Lobster';
 }
 /* PERSONAL */
-html, body {
-    width: 100%;
+html {
     height: 100%;
+}
+body {
+    width: 100%;
+    min-height: 100%;
     padding: 0;
     margin: 0;
 }
@@ -20,7 +23,7 @@ body {
 }
 */
 .max-height {
-    height: 100%;
+    min-height: 100%;
 }
 
 /* END PERSONAL */
