--- a/messaging/templates/messaging/message_list.html
+++ b/messaging/templates/messaging/message_list.html
@@ -5,7 +5,7 @@
 {% block content %}
     <form action="{%  url  'messaging:search'  %}" method="post" >
         {% csrf_token %}
-        <input type="text" placeholder="Search users here..." name="term" size="30">
+        <input type="text" placeholder="Search users by username, name, email, phone, city..." name="search" size="60">
         <button type="submit">Search</button>
     </form>
 <h1>
