--- a/messaging/templates/messaging/search_users.html
+++ b/messaging/templates/messaging/search_users.html
@@ -18,7 +18,7 @@
                     </a>
                 </li>
             {% endif %}
-            {% empty %} <h4>Sorry, there isn't any user with that name</h4>
+            {% empty %} <h4>Sorry, any user was found with that query</h4>
         {% endfor %}
     </ul>
 </div>
