html and css revised

--- a/messaging/static/style/base.css
+++ b/messaging/static/style/base.css
@@ -93,3 +93,8 @@ textarea, input[type=number], input[type=url]
 #remove-button {
     float: right;
 }
+
+/* SEARCH BAR AND RESULTS */
+#search_link {
+    font-size: 18px;
+}
